cleanup TextChunk: reduce service calls
GitOrigin-RevId: e5e5fdca74055210470bb7713a74e058b23584a3